content/_generated-doc/2.7/config/quarkus-flyway-config-group-flyway-data-source-runtime-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-flyway-config-group-flyway-data-source-runtime-config_configuration]]link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.connect-retries]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.connect-retries[quarkus.flyway.connect-retries]`

[.description]
--
The maximum number of retries when attempting to connect to the database. After each failed attempt, Flyway will wait 1 second before attempting to connect again, up to the maximum number of times specified by connectRetries.
--|int 
|


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.default-schema]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.default-schema[quarkus.flyway.default-schema]`

[.description]
--
Sets the default schema managed by Flyway. This schema name is case-sensitive. If not specified, but _schemas_ is, Flyway uses the first schema in that list. If that is also not specified, Flyway uses the default schema for the database connection. 
 Consequences:   
 - This schema will be the one containing the schema history table. 
 - This schema will be the default for the database connection (provided the database supports this concept).
--|string 
|


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.schemas]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.schemas[quarkus.flyway.schemas]`

[.description]
--
Comma-separated case-sensitive list of schemas managed by Flyway. The first schema in the list will be automatically set as the default one during the migration. It will also be the one containing the schema history table.
--|list of string 
|


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.table]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.table[quarkus.flyway.table]`

[.description]
--
The name of Flyway's schema history table. By default (single-schema mode) the schema history table is placed in the default schema for the connection provided by the datasource. When the flyway.schemas property is set (multi-schema mode), the schema history table is placed in the first schema of the list.
--|string 
|


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.sql-migration-prefix]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.sql-migration-prefix[quarkus.flyway.sql-migration-prefix]`

[.description]
--
The file name prefix for versioned SQL migrations. Versioned SQL migrations have the following file name structure: prefixVERSIONseparatorDESCRIPTIONsuffix , which using the defaults translates to V1.1__My_description.sql
--|string 
|


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.repeatable-sql-migration-prefix]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.repeatable-sql-migration-prefix[quarkus.flyway.repeatable-sql-migration-prefix]`

[.description]
--
The file name prefix for repeatable SQL migrations. Repeatable SQL migrations have the following file name structure: prefixSeparatorDESCRIPTIONsuffix , which using the defaults translates to R__My_description.sql
--|string 
|


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.clean-at-start]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.clean-at-start[quarkus.flyway.clean-at-start]`

[.description]
--
true to execute Flyway clean command automatically when the application starts, false otherwise.
--|boolean 
|`false`


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.clean-disabled]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.clean-disabled[quarkus.flyway.clean-disabled]`

[.description]
--
true to prevent Flyway clean operations, false otherwise.
--|boolean 
|`false`


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.migrate-at-start]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.migrate-at-start[quarkus.flyway.migrate-at-start]`

[.description]
--
true to execute Flyway automatically when the application starts, false otherwise.
--|boolean 
|`false`


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.baseline-on-migrate]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.baseline-on-migrate[quarkus.flyway.baseline-on-migrate]`

[.description]
--
Enable the creation of the history table if it does not exist already.
--|boolean 
|`false`


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.baseline-version]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.baseline-version[quarkus.flyway.baseline-version]`

[.description]
--
The initial baseline version.
--|string 
|


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.baseline-description]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.baseline-description[quarkus.flyway.baseline-description]`

[.description]
--
The description to tag an existing schema with when executing baseline.
--|string 
|


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.validate-on-migrate]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.validate-on-migrate[quarkus.flyway.validate-on-migrate]`

[.description]
--
Whether to automatically call validate when performing a migration.
--|boolean 
|`false`


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.out-of-order]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.out-of-order[quarkus.flyway.out-of-order]`

[.description]
--
Allows migrations to be run "out of order".
--|boolean 
|`false`


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.ignore-missing-migrations]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.ignore-missing-migrations[quarkus.flyway.ignore-missing-migrations]`

[.description]
--
Ignore missing migrations when reading the history table. When set to true migrations from older versions present in the history table but absent in the configured locations will be ignored (and logged as a warning), when false (the default) the validation step will fail.
--|boolean 
|`false`


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.ignore-future-migrations]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.ignore-future-migrations[quarkus.flyway.ignore-future-migrations]`

[.description]
--
Ignore future migrations when reading the history table. When set to true migrations from newer versions present in the history table but absent in the configured locations will be ignored (and logged as a warning), when false (the default) the validation step will fail.
--|boolean 
|`false`


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.create-schemas]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.create-schemas[quarkus.flyway.create-schemas]`

[.description]
--
Whether Flyway should attempt to create the schemas specified in the schemas property
--|boolean 
|`true`


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.placeholder-prefix]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.placeholder-prefix[quarkus.flyway.placeholder-prefix]`

[.description]
--
Prefix of every placeholder (default: $++{++ )
--|string 
|


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.placeholder-suffix]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.placeholder-suffix[quarkus.flyway.placeholder-suffix]`

[.description]
--
Suffix of every placeholder (default: ++}++ )
--|string 
|


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.init-sql]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.init-sql[quarkus.flyway.init-sql]`

[.description]
--
The SQL statements to run to initialize a new database connection immediately after opening it.
--|string 
|


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.placeholders-placeholders]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.placeholders-placeholders[quarkus.flyway.placeholders]`

[.description]
--
Sets the placeholders to replace in SQL migration scripts.
--|`Map<String,String>` 
|


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.connect-retries]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.connect-retries[quarkus.flyway."named-data-sources".connect-retries]`

[.description]
--
The maximum number of retries when attempting to connect to the database. After each failed attempt, Flyway will wait 1 second before attempting to connect again, up to the maximum number of times specified by connectRetries.
--|int 
|


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.default-schema]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.default-schema[quarkus.flyway."named-data-sources".default-schema]`

[.description]
--
Sets the default schema managed by Flyway. This schema name is case-sensitive. If not specified, but _schemas_ is, Flyway uses the first schema in that list. If that is also not specified, Flyway uses the default schema for the database connection. 
 Consequences:   
 - This schema will be the one containing the schema history table. 
 - This schema will be the default for the database connection (provided the database supports this concept).
--|string 
|


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.schemas]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.schemas[quarkus.flyway."named-data-sources".schemas]`

[.description]
--
Comma-separated case-sensitive list of schemas managed by Flyway. The first schema in the list will be automatically set as the default one during the migration. It will also be the one containing the schema history table.
--|list of string 
|


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.table]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.table[quarkus.flyway."named-data-sources".table]`

[.description]
--
The name of Flyway's schema history table. By default (single-schema mode) the schema history table is placed in the default schema for the connection provided by the datasource. When the flyway.schemas property is set (multi-schema mode), the schema history table is placed in the first schema of the list.
--|string 
|


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.sql-migration-prefix]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.sql-migration-prefix[quarkus.flyway."named-data-sources".sql-migration-prefix]`

[.description]
--
The file name prefix for versioned SQL migrations. Versioned SQL migrations have the following file name structure: prefixVERSIONseparatorDESCRIPTIONsuffix , which using the defaults translates to V1.1__My_description.sql
--|string 
|


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.repeatable-sql-migration-prefix]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.repeatable-sql-migration-prefix[quarkus.flyway."named-data-sources".repeatable-sql-migration-prefix]`

[.description]
--
The file name prefix for repeatable SQL migrations. Repeatable SQL migrations have the following file name structure: prefixSeparatorDESCRIPTIONsuffix , which using the defaults translates to R__My_description.sql
--|string 
|


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.clean-at-start]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.clean-at-start[quarkus.flyway."named-data-sources".clean-at-start]`

[.description]
--
true to execute Flyway clean command automatically when the application starts, false otherwise.
--|boolean 
|`false`


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.clean-disabled]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.clean-disabled[quarkus.flyway."named-data-sources".clean-disabled]`

[.description]
--
true to prevent Flyway clean operations, false otherwise.
--|boolean 
|`false`


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.migrate-at-start]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.migrate-at-start[quarkus.flyway."named-data-sources".migrate-at-start]`

[.description]
--
true to execute Flyway automatically when the application starts, false otherwise.
--|boolean 
|`false`


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.baseline-on-migrate]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.baseline-on-migrate[quarkus.flyway."named-data-sources".baseline-on-migrate]`

[.description]
--
Enable the creation of the history table if it does not exist already.
--|boolean 
|`false`


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.baseline-version]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.baseline-version[quarkus.flyway."named-data-sources".baseline-version]`

[.description]
--
The initial baseline version.
--|string 
|


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.baseline-description]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.baseline-description[quarkus.flyway."named-data-sources".baseline-description]`

[.description]
--
The description to tag an existing schema with when executing baseline.
--|string 
|


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.validate-on-migrate]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.validate-on-migrate[quarkus.flyway."named-data-sources".validate-on-migrate]`

[.description]
--
Whether to automatically call validate when performing a migration.
--|boolean 
|`false`


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.out-of-order]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.out-of-order[quarkus.flyway."named-data-sources".out-of-order]`

[.description]
--
Allows migrations to be run "out of order".
--|boolean 
|`false`


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.ignore-missing-migrations]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.ignore-missing-migrations[quarkus.flyway."named-data-sources".ignore-missing-migrations]`

[.description]
--
Ignore missing migrations when reading the history table. When set to true migrations from older versions present in the history table but absent in the configured locations will be ignored (and logged as a warning), when false (the default) the validation step will fail.
--|boolean 
|`false`


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.ignore-future-migrations]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.ignore-future-migrations[quarkus.flyway."named-data-sources".ignore-future-migrations]`

[.description]
--
Ignore future migrations when reading the history table. When set to true migrations from newer versions present in the history table but absent in the configured locations will be ignored (and logged as a warning), when false (the default) the validation step will fail.
--|boolean 
|`false`


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.placeholders-placeholders]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.placeholders-placeholders[quarkus.flyway."named-data-sources".placeholders]`

[.description]
--
Sets the placeholders to replace in SQL migration scripts.
--|`Map<String,String>` 
|


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.create-schemas]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.create-schemas[quarkus.flyway."named-data-sources".create-schemas]`

[.description]
--
Whether Flyway should attempt to create the schemas specified in the schemas property
--|boolean 
|`true`


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.placeholder-prefix]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.placeholder-prefix[quarkus.flyway."named-data-sources".placeholder-prefix]`

[.description]
--
Prefix of every placeholder (default: $++{++ )
--|string 
|


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.placeholder-suffix]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.placeholder-suffix[quarkus.flyway."named-data-sources".placeholder-suffix]`

[.description]
--
Suffix of every placeholder (default: ++}++ )
--|string 
|


a| [[quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.init-sql]]`link:#quarkus-flyway-config-group-flyway-data-source-runtime-config_quarkus.flyway.-named-data-sources-.init-sql[quarkus.flyway."named-data-sources".init-sql]`

[.description]
--
The SQL statements to run to initialize a new database connection immediately after opening it.
--|string 
|

|===